--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Astrofy is a free and open-source template for your Personal Portfolio Website built with Astro and TailwindCSS. Create in minutes a website with Blog, CV, Project Section, Store and RSS Feed.",
   "type": "module",
   "version": "3.0.0",
+  "packageManager": "pnpm@9.1.2",
   "private": true,
   "scripts": {
     "dev": "astro dev",
