--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "daisyui": "^4.4.10",
     "dayjs": "^1.11.9",
     "sharp": "^0.32.6",
-    "tailwindcss": "^3.3.5",
-    "mermaid": "10.0.0"
+    "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10"
